changed the design of vendor dashboard, implemented order change status functionallity, wallet app, Review app, implemented refund for the users for cancelled paid orders

--- a/feastrove/static/css/cs-foodbakery-plugin.css
+++ b/feastrove/static/css/cs-foodbakery-plugin.css
@@ -1999,7 +1999,7 @@ div.daterangepicker { border: 1px solid #eceef4; -webkit-box-shadow: none; box-s
 .wp-foodbakery .listing.grid-slider .rating-star .rating-box:before, .location-holder.modern a.more-btn, .grid-slider .swiper-button-prev:hover i, .grid-slider .swiper-button-next:hover i,
 .company-holder.simple .company-logo .text-holder .post-title h6 a:hover
 {
-color:#c33332 !important;
+color:#F17228 !important;
 }
 .bgcolor, .chosen-container .chosen-results li.highlighted, .order-sort-results ul li:hover:before, .bootstrap-datetimepicker-widget .btn-primary, 
 .booking-info-sec .contact-info .field-holder .submit-btn input[type="submit"], .user-order input[type="submit"], .main-post .column-text form .field-holder .field-btn, 
@@ -2030,7 +2030,7 @@ body,
 .main-section p,
 .mce-content-body p
 {
-font:Normal  14px/24px "Open Sans", sans-serif;letter-spacing: 0px;text-transform: none;color: #515151 !important;	    }
+font:Normal  14px/24px "Open Sans", sans-serif;letter-spacing: 0px;text-transform: none;color: #515151;	    }
 header .logo {
 margin-top:0px;
 margin-right:0px;
