--- a/templates/customer/profile.html
+++ b/templates/customer/profile.html
@@ -164,7 +164,7 @@
 
 {% block extra_js %}
 
-   {% include 'includes/extrajs.html' %}
+   {% comment %} {% include 'includes/extrajs.html' %} {% endcomment %}
 
 
 {% endblock %}
