--- a/templates/includes/vendorCover.html
+++ b/templates/includes/vendorCover.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="page-section restaurant-detail-image-section" style=" background: url({% if vendor.user_profile.cover_photho %}{{ vendor.user_profile.cover_photho.url }}{% endif %}) no-repeat scroll 0 0 / cover;">
+<div class="page-section restaurant-detail-image-section mb-0" style=" background: url({% if vendor.user_profile.cover_photho %}{{ vendor.user_profile.cover_photho.url }}{% endif %}) no-repeat scroll 0 0 / cover;">
     <!-- Container Start -->
     <div class="container">
         <!-- Row Start -->
