--- a/templates/includes/extraStyles.html
+++ b/templates/includes/extraStyles.html
@@ -7,6 +7,6 @@
 <link href="{% static 'css/iconmoon.css' %}" rel="stylesheet">
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 <link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet">
-<link href="{% static "css/custom.css" %}" rel="stylesheet">
+{% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet"> {% endcomment %}
+{% comment %} <link href="{% static "css/custom.css" %}" rel="stylesheet"> {% endcomment %}
