--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -22,7 +22,7 @@
                             {% csrf_token %}
                             {% for address in addresses %}
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="delivery-address" id="Radio-{{ address.id }}" value="{{ address.id }}">
+                                <input class="form-check-input" type="radio" name="delivery-address" id="Radio-{{ address.id }}" value="{{ address.id }}" {% if address.is_default %} checked {% endif %}>
                                 <label class="form-check-label w-100" for="Radio-{{ address.id }}">
                                     
                                     <div class="card mb-2" id="address-{{ address.id }}">
