--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -39,7 +39,7 @@
 													Total Orders
 												</div>
 												<div class="card-body text-center">
-													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">12347</h5></a>
+													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">{{ total_order_count }}</h5></a>
 												</div>
 											</div>
 										</div>
