--- a/templates/orders/orderComplete.html
+++ b/templates/orders/orderComplete.html
@@ -72,7 +72,9 @@
                 <hr>
                 <div class="d-flex justify-content-between">
                     <div class="">
+                        {% if order.payment.status == 'COMPLETED' %}
                         <img src="{% static 'images/payment-logo/paid.png' %}" width="200px">
+                        {% endif %}
                     </div>
                     <div class="d-flex flex-column px-3 w-25">
                         <h6 class="text-center fw-medium">Summary</h6>
