--- a/templates/orders/placeOrder.html
+++ b/templates/orders/placeOrder.html
@@ -249,13 +249,19 @@
     };
     var rzp1 = new Razorpay(options);
     rzp1.on('payment.failed', function (response){
-            alert(response.error.code);
-            alert(response.error.description);
-            alert(response.error.source);
-            alert(response.error.step);
-            alert(response.error.reason);
-            alert(response.error.metadata.order_id);
-            alert(response.error.metadata.payment_id);
+            console.log("hello");
+            console.log(response);
+            Swal.fire({
+                title: response.error.reason,
+                icon: "error"
+            })
+            // alert(response.error.code);
+            // alert(response.error.description);
+            // alert(response.error.source);
+            // alert(response.error.step);
+            // alert(response.error.reason);
+            // alert(response.error.metadata.order_id);
+            // alert(response.error.metadata.payment_id);
     });
     document.getElementById('rzp-button1').onclick = function(e){
         rzp1.open();
