--- a/templates/orders/orderComplete.html
+++ b/templates/orders/orderComplete.html
@@ -80,6 +80,9 @@
                         <h6 class="text-center fw-medium">Summary</h6>
                         <div class="d-flex justify-content-between"><span>Subtotal: </span><span class="fw-medium">₹{{ order.total }}</span></div>
                         <div class="d-flex justify-content-between"><span>Tax: </span><span class="fw-medium">₹{{ order.total_tax }}</span></div>
+                        {% if order.discount_amount %}
+                        <div class="d-flex justify-content-between"><span>Discount: </span><span class="fw-medium">- ₹{{ order.discount_amount }}</span></div>
+                        {% endif %}
                         <hr>
                         <div class="d-flex justify-content-between fw-bold"><span>Total: </span><span>₹{{ order.total_amount }}</span></div>
                     </div>
