--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -39,7 +39,7 @@
 													Total Orders
 												</div>
 												<div class="card-body text-center">
-													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">{{ total_order_count }}</h5></a>
+													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">{{ order_summary.total_order_count }}</h5></a>
 												</div>
 											</div>
 										</div>
@@ -50,7 +50,7 @@
 													Total Revenue
 												</div>
 												<div class="card-body text-center">
-													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">₹12347</h5></a>
+													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">₹{{ total_revenue.total_sum }}</h5></a>
 												</div>
 											</div>
 										</div>
@@ -58,10 +58,10 @@
 										<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 											<div class="card">
 												<div class = "card-header">
-													This month
+													Rating
 												</div>
 												<div class="card-body text-center">
-													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">₹12347</h5></a>
+													<a class="text-decoration-none" href="#"> <h5 class="card-title text-center">{{ average_rating.avg_rating|floatformat:1 }} ({{ average_rating.rating_count }})</h5></a>
 												</div>
 											</div>
 										</div>
