--- a/templates/orders/placeOrder.html
+++ b/templates/orders/placeOrder.html
@@ -82,12 +82,21 @@
                             <li
                                 class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                 <span>Subtotal</span>
-                                <span id="subtotal">₹{{ subtotal }}</span>
+                                <span id="subtotal">₹{{ order.total }}</span>
                             </li>
+                          
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <span>Tax</span>
-                                <span id="tax">₹{{ tax }}</span>
+                                <span id="tax">₹{{ order.total_tax }}</span>
                             </li>
+
+                            {% if order.discount_amount %}
+                            <li id="discount-block" class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
+                                <span>Discount</span>
+                                <span id="discount_amount" class="text-success">- ₹{{ order.discount_amount }}</span>
+                            </li>
+                            {% endif %}
+                            
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
                                 <div>
                                     <strong>Total amount</strong>
@@ -95,7 +104,7 @@
                                         <p class="mb-0">(including Tax)</p>
                                     </strong>
                                 </div>
-                                <span class="fw-bold" id="grand_total">₹{{ grand_total }}</span>
+                                <span class="fw-bold" id="grand_total">₹{{ order.total_amount }}</span>
                             </li>
                             {% if order.payment_method == 'paypal' %}
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
