--- a/templates/base_layouts/base.html
+++ b/templates/base_layouts/base.html
@@ -29,7 +29,7 @@
     <script src="{% static 'javascript/custom.js' %}"></script>
 </head>
 
-<body class="overflow-x hidden bg-white">
+<body class="overflow-x hidden bg-white" style="overflow-x: hidden !important">
 
 
     <!-- Navbar section -->
