--- a/templates/admin_dashboard/adminDashboard.html
+++ b/templates/admin_dashboard/adminDashboard.html
@@ -1,6 +1,11 @@
 {% extends 'base_layouts/base.html' %}
 {% load static %}
 
+{% block extra_head %}
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css"/>
+{% endblock %}
 
 {% block navbar %}
     <a href="{% url 'logout' %}">
@@ -9,6 +14,122 @@
 {% endblock %}
 
 {% block body %}
-<h1 class="text-center p-3">Admin Dashboard</h1>
-<h2 class="text-center p-0">{{request.user}}</h2>
+
+
+
+<section>
+
+    <div class="container p-0">
+        
+        <h2 class="mb-4">Dashboard</h2>
+    
+    <!-- Customer and Vendor Summary -->
+    <div class="row mb-4">
+        <div class="col-md-6">
+            <div class="card  bg-success-subtle mb-3">
+                <div class="card-header">Total Customers</div>
+                <div class="card-body">
+                    <h5 class="card-title">{{ customer_data.customer_count }}</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card  bg-success-subtle mb-3">
+                <div class="card-header">Total Vendors</div>
+                <div class="card-body">
+                    <h5 class="card-title">{{ customer_data.vendor_count }}</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <!-- Top 10 Products Table -->
+    <h3 class="mb-3">Top 10 Products</h3>
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Product ID</th>
+                    <th scope="col">Restaurant</th>
+                    <th scope="col">Product Name</th>
+                    <th scope="col">Total Quantity Sold</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for product in top_products %}
+                <tr>
+                    <td>{{ forloop.counter }}</td>
+                    <td>{{ product.fooditem }}</td>
+                    <td>{{ product.vendor_name }}</td>
+                    <td>{{ product.food_title }}</td>
+                    <td>{{ product.total_quantity_sold }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    </div>
+			
+    <div class="container p-0">
+        <hr>
+        <div class="col-12">
+            
+            <div class="row p-2">
+                <h5 class="p-0 m-0">Orders History</h5>
+            </div>
+
+            <div class="row mt-2">
+                <table id="ordersTable" class="table table-striped table-hover" style="width:100%;">
+
+                    <thead class="table-secondary">
+                        <tr>
+                          
+                            <th class="text-start" scope="col">Order No</th>
+                            <th scope="col">Date</th>
+                              <th scope="col">Restaurant</th>
+                              <th scope="col">Payment method</th>
+                              <th scope="col">Status</th>
+                              <th scope="col">Subtotal</th>
+                              <th scope="col">Tax</th>
+                              <th scope="col">Discount</th>
+                              <th scope="col">Total</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for order in orders %}
+                        <tr id="order-{{ order.order_number }}">
+                            
+                            <td class="text-start">{{ order.order_number }}</td>
+                            <td>{{ order.created_at|date:"M-d-Y" }}</td>
+                            <td>{{ order.vendor }}</td>
+                            <td>{{ order.payment_method }}</td>
+                            <td>{{ order.status }}</td>
+                            <td>₹{{ order.total }}</td>
+                            <td>₹{{ order.total_tax }}</td>
+                            <td>₹{{ order.discount_amount }}</td>
+                            <td>₹{{ order.total_amount }}</td>
+                        </tr>
+                        {% endfor %}
+                        
+                      </tbody>
+    
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}  
+
+
+{% block extra_js %}
+<script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
+<script src="https://cdn.datatables.net/2.1.8/js/dataTables.bootstrap5.js"></script>
+<script>
+   $(document).ready(function(){
+    new DataTable('#ordersTable')
+   })
+
+</script>
+
+{% endblock %}
